Add custom colors

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <link href="./styles/output.css" rel="stylesheet" />
   </head>
   <body>
-    <h1 class="text-blue-500">TODO</h1>
+    <h1 class="text-darker-greyish-blue">TODO</h1>
   </body>
 </html>
