Dark style fixes

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <div class="flex items-center gap-2">
             <div
               id="unchecked"
-              class="rounded-full h-6 w-6 border border-light-greyish-blue hover:bg-light-greyish-blue-hover-dark"
+              class="rounded-full h-6 w-6 border border-light-greyish-blue dark:border-darker-greyish-blue hover:bg-light-greyish-blue-hover-dark dark:hover:bg-dark-greyish-blue-dark"
             ></div>
 
             <input
@@ -46,7 +46,10 @@
     </section>
 
     <section id="entry-section" class="mx-auto -mt-6 px-6 max-w-lg">
-      <div id="entry-list" class="rounded overflow-hidden bg-white shadow-2xl">
+      <div
+        id="entry-list"
+        class="rounded overflow-hidden bg-white dark:bg-darker-desaturated-blue-dark shadow-2xl"
+      >
         <div class="p-3 flex items-center gap-2">
           <div
             id="checked"
