--- a/index.html
+++ b/index.html
@@ -47,29 +47,56 @@
 
     <section id="entry-section" class="mx-auto -mt-6 px-6 max-w-lg">
       <div
-        id="entry-list"
         class="rounded overflow-hidden bg-white dark:bg-darker-desaturated-blue-dark shadow-2xl"
       >
-        <div class="p-3 flex items-center gap-2">
-          <div
-            id="checked"
-            class="rounded-full h-6 w-6 check-color border border-light-greyish-blue hover:opacity-80"
-          >
-            <img
-              src="images/icon-check.svg"
-              alt="uncheck"
-              class="m-auto h-full w-full p-[6px]"
-            />
+        <!-- Entries List -->
+        <div id="entry-list">
+          <div class="p-3 flex items-center gap-2">
+            <div
+              id="checked"
+              class="rounded-full h-6 w-6 check-color border border-light-greyish-blue hover:opacity-80"
+            >
+              <img
+                src="images/icon-check.svg"
+                alt="uncheck"
+                class="m-auto h-full w-full p-[6px]"
+              />
+            </div>
+            <div class="flex-1 truncate">testffffffff</div>
+
+            <div
+              id="delete"
+              class="flex items-center p-1 hover:bg-light-greyish-blue-hover-dark"
+            >
+              <img src="/images/icon-cross.svg" alt="delete" />
+            </div>
           </div>
-          <div class="flex-1 truncate">
-            testfffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff
+        </div>
+
+        <!-- Bottom Nav -->
+        <div
+          class="grid grid-cols-3 items-center p-2 text-sm text-dark-greyish-blue"
+        >
+          <div class="text-xs"><span id="items-number">5</span> items left</div>
+
+          <div class="flex gap-3">
+            <span
+              id="all"
+              class="hover:text-darker-greyish-blue selected navigator"
+              >All</span
+            >
+            <span id="active" class="hover:text-darker-greyish-blue navigator"
+              >Active</span
+            >
+            <span
+              id="completed"
+              class="hover:text-darker-greyish-blue navigator"
+              >Completed</span
+            >
           </div>
 
-          <div
-            id="delete"
-            class="flex items-center p-1 hover:bg-light-greyish-blue-hover-dark"
-          >
-            <img src="/images/icon-cross.svg" alt="delete" />
+          <div class="clear text-right text-xs hover:text-darker-greyish-blue">
+            Clear Completed
           </div>
         </div>
       </div>
