Add images for mobile

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body class="dark:bg-dark-blue-dark">
     <section
       id="banner"
-      class="bg-[url('/images/bg-desktop-light.jpg')] dark:bg-[url('/images/bg-desktop-dark.jpg')] bg-cover h-[30vh]"
+      class="bg-[url('/images/bg-mobile-light.jpg')] dark:bg-[url('/images/bg-mobile-dark.jpg')] sm:bg-[url('/images/bg-desktop-light.jpg')] sm:dark:bg-[url('/images/bg-desktop-dark.jpg')] bg-cover h-[30vh]"
     >
       <div
         class="h-full mx-auto p-6 max-w-lg flex flex-col justify-center gap-6"
