--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TO-DO</title>
     <link href="./styles/output.css" rel="stylesheet" />
+    <link rel="icon" type="image/png" href="images/favicon-32x32.png" />
   </head>
   <body class="dark:bg-dark-blue-dark">
     <section
